--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,12 +4,23 @@ spring:
     url: jdbc:mysql://123.57.186.79:3306/big_event
     username: root
     password: Wjt18409438!
+#    password: 1234
+
   data:
     redis:
       host: localhost
       port: 6379
+
+  mail:
+    #    username: 18872903225@163.com
+    #    password: VEYGOWIZVVZRTESC
+    #    host: smtp.163.com
+    username: putileaf@foxmail.com
+    password: fjlsnqqinrgrddbc
+    host: smtp.qq.com
+
+#开启驼峰命名和下划线命名的自动转换
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
-#开启驼峰命名和下划线命名的自动转换
 
