修复忘记密码

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <packaging>jar</packaging>
 
   <name>big-enent</name>
-  <url>http://maven.apache.org</url>
+  <url>https://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
