--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
+!**/src/main/application.yml
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
